
Features:
- Add support for the ``--with-framework-name`` option of Python's
  configure script, that is: py2app now also works when the Python
  framework is not named 'Python.framework'.
- Add support for various build flavours of Python (32bit, 3-way, ...)
- py2app now actually works for me (ronaldoussoren@mac.com) with a 
  python interpreter in a virtualenv environment.

Bug fixes:
- Use modern API's in the alias-build bootstrap code, without
  this 'py2app -A' will result in broken bundles on a 64-bit build
  of Python. 
  (Patch contributed by James R Eagan)
- Try both 'import Image' and 'from PIL import Image' in the PIL
  recipe.
  (Patch contributed by Christopher Barker)
- The stub executable now works for 64-bit application bundles
- (Lowlevel) The application stub was rewritten to use
  ``dlopen`` instead of ``dyld`` APIs. This removes deprecation
  warnings during compilation.

py2app 0.4.3
------------

py2app 0.4.3 is a bugfix release

Bug fixes:
- A bad format string in build_app.py made it impossible to copy the
  Python framework into an app bundle.

py2app 0.4.2
------------

py2app 0.4.2 is a minor feature release

Features:

- When the '--strip' option is specified we now also remove '.dSYM' 
  directories from the bundle.

- Remove dependency on a 'version.plist' file in the python framework

- A new recipe for `PyQt`_ 4.x. This recipe was donated by Kevin Walzer.

- A new recipe for `virtualenv`_, this allows you to use py2app from 
  a virtual environment.

- Adds support for converting ``.xib`` files (NIB files for
  Interface Builder 3)

- Introduces an experimental plugin API for data converters. 

  A conversion plugin should be defined as an entry-point in the
  ``py2app.converter`` group::

       setup(
         ...
	 entry_points = {
		 'py2app.converter': [
		     "label          = some_module:converter_function",
		  ]
	  },
	  ...
      )

  The conversion function should be defined like this::
